# arroy

./: .gitignore  Cargo.toml  LICENSE  README.md  diff-run.sh  pyproject.toml
.github/workflows/: fuzzer.yml  rust.yml
benches/: reader.rs
examples/: build-tree-no-commit.rs  compare-with-hnsw.rs  compare_with_hnsw.rs  debug.rs  fuzz.rs  graph.rs  import-vectors.rs  import_movies.rs  relevancy.rs  sample-vectors.rs  sample_vectors.rs  search_movies.rs  simple.rs  stats.rs  visualize.rs
proptest-regressions/unaligned_vector/: binary_quantized_test.txt  binary_test.txt
python/: __init__.py
src/: arroy.rs  arroy_reader.rs  distance.rs  error.rs  heed_reader.rs  item_iter.rs  key.rs  lib.rs  main.rs  measurements.rs  metadata.rs  node.rs  node_id.rs  nohash_hasher.rs  parallel.rs  priority_queue.rs  python.rs  reader.rs  roaring.rs  stats.rs  tmp_nodes.rs  upgrade.rs  version.rs  writer.rs
src/distance/: angular.rs  binary_quantized_angular.rs  binary_quantized_cosine.rs  binary_quantized_euclidean.rs  binary_quantized_manhattan.rs  cosine.rs  dot_product.rs  euclidean.rs  hamming.rs  manhattan.rs  mod.rs
src/spaces/: mod.rs  simple.rs  simple_avx.rs  simple_neon.rs  simple_sse.rs
src/tests/: angular.rs  binary.rs  binary_quantized.rs  fit_in_memory.rs  mod.rs  node.rs  reader.rs  tmp_nodes.rs  upgrade.rs  writer.rs
src/tests/assets/v0_6/: large.mdb  smol.mdb
src/tests/snapshots/: arroy__tests__upgrade__large_upgrade_v0_6_to_v0_7-10.snap  arroy__tests__writer__write_a_lot_of_random_points.snap  arroy__tests__writer__write_and_update_lot_of_random_points-2.snap  arroy__tests__writer__write_and_update_lot_of_random_points.snap  arroy__tests__writer__write_and_update_lot_of_random_points_with_little_memory-2.snap  arroy__tests__writer__write_and_update_lot_of_random_points_with_little_memory.snap
src/unaligned_vector/: binary.rs  binary_quantized.rs  binary_quantized_test.rs  binary_test.rs  f32.rs  mod.rs
tests/: test_basic.py
