[package]
name = "arroy"
description = "Annoy-inspired Approximate Nearest Neighbors in Rust, based on LMDB and optimized for memory usage"
version = "0.4.0"
documentation = "https://docs.rs/arroy"
repository = "https://github.com/meilisearch/arroy"
keywords = ["ANN-search", "Graph-algorithms", "Vector-Search", "Store"]
categories = ["algorithms", "database", "data-structures", "science"]
authors = ["Kerollmops <clement@meilisearch.com>", "Tamo <tamo@meilisearch.com>"]
license = "MIT"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive", "extern_crate_alloc"] }
byteorder = "1.5.0"
heed = { version = "0.20.2", default-features = false }
log = "0.4.21"
memmap2 = "0.9.4"
ordered-float = "4.2.0"
rand = { version = "0.8.5", features = ["alloc"] }
rayon = "1.10.0"
roaring = "0.10.5"
tempfile = "3.10.1"
thiserror = "1.0.61"
nohash = "0.2.0"
proptest = "1.5.0"

[dev-dependencies]
anyhow = "1.0.86"
arbitrary = { version = "1.3.2", features = ["derive"] }
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
insta = "1.39.0"
instant-distance = "0.6.1"
rand = { version = "0.8.5", features = ["std_rng"] }
tempfile = "3.10.1"

[features]
default = []

# Enabling this feature provide a method on the reader that can plot its root node in the dot format.
plot = []

# Enabling this feature provide a method on the reader that assert its own validity.
assert-reader-validity = []

[[example]]
name = "graph"
required-features = ["plot"]

[[example]]
name = "fuzz"
required-features = ["assert-reader-validity"]
